--- a/DL_1.ipynb
+++ b/DL_1.ipynb
@@ -904,7 +904,7 @@
         "model.add(Dropout(0.15))\n",
         "model.add(Dense(54, activation = 'relu'))\n",
         "model.add(Dropout(0.18))\n",
-        "model.add(Dense(1))"
+        "model.add(Dense(1, activation = 'linear'))"
       ],
       "metadata": {
         "id": "VUWA-D6ZTJPQ"
